cloudformation.yml
AWSTemplateFormatVersion: 2010-09-09

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Global
        Parameters:
          - Client
      - Label:
          default: VPC
        Parameters:
          - VpcCidr
          - VpcPublicSubnetZone
          - VpcPublicSubnetCidr
      - Label:
          default: EC2
        Parameters:
          - Ec2KeyPairName
          - Ec2AmiId
          - Ec2JupyterPassword
    ParameterLabels:
      Client:
        default: Cliente
      VpcCidr:
        default: VPC CIDR
      VpcPublicSubnetCidr:
        default: Subnet Publico CIDR
      VpcPublicSubnetZone:
        default: Zona da Subnet Publica
      Ec2KeyPairName:
        default: Chave de Acesso
      Ec2AmiId:
        default: AMI
      Ec2JupyterPassword:
        default: Senha Jupyter

Parameters:
  Client:
    Type: String
    Description: O nome do cliente
    Default: health-machine
  VpcCidr:
    Type: String
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    Description: O bloco CIDR da VPC (ex. 10.10.0.0/24)
    Default: 10.100.0.0/24
  VpcPublicSubnetCidr:
    Type: String
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    Description: O bloco CIDR da Subnet Publica (ex. 10.10.0.0/24)
    Default: 10.100.0.0/24
  VpcPublicSubnetZone:
    Type: AWS::EC2::AvailabilityZone::Name
    Description: A zona de disponibilidade para criar a Subnet Publica
    Default: us-east-1a
  Ec2KeyPairName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Chave de acesso a instancia
  Ec2AmiId:
    Type: String
    Description: Id da AMI
    Default: ami-0f9fc25dd2506cf6d
  Ec2JupyterPassword:
    Type: String
    NoEcho: true
    Description: A senha de acesso ao jupyter
  SetupBucket:
    Type: String
    Description: Nome do Bucket de Setup

Resources:
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      Tags:
        - Key: Name
          Value: !Sub vpc-${Client}
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-${Client}
  InternetGatewayAttachment:
    DependsOn: [InternetGateway, Vpc]
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref Vpc
  PublicRouteTable:
    DependsOn: Vpc
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-${Client}-public
  PublicRouteTableRouteInternet:
    DependsOn: [PublicRouteTable, InternetGateway]
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref VpcPublicSubnetZone
      CidrBlock: !Ref VpcPublicSubnetCidr
      MapPublicIpOnLaunch: true
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-${Client}-public
  RouteTableAssociationPublicSubnet:
    DependsOn: [PublicRouteTable, PublicSubnet]
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet
  InstanceSecurityGroup:
    DependsOn: Vpc
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow only https ingress
      VpcId: !Ref Vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-${Client}
  Instance:
    DependsOn: [RouteTableAssociationPublicSubnet, InstanceSecurityGroup]
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref Ec2KeyPairName
      ImageId: !Ref Ec2AmiId
      InstanceType: t3.small
      SubnetId: !Ref PublicSubnet
      IamInstanceProfile: EMR_EC2_DefaultRole
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub jupyter-${Client}
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          amazon-linux-extras install java-openjdk11 -y
          curl -O https://dlcdn.apache.org/spark/spark-3.2.1/spark-3.2.1-bin-hadoop3.2.tgz
          tar xzf spark-3.2.1-bin-hadoop3.2.tgz -C /usr/local --owner root --group root --no-same-owner
          rm -rf spark-3.2.1-bin-hadoop3.2.tgz
          mv /usr/local/spark-3.2.1-bin-hadoop3.2 /usr/local/spark
          pip3 install pyspark --no-cache-dir
          pip3 install jupyterlab --no-cache-dir
          touch /lib/systemd/system/jupyter.service
          echo "[Unit]" >> /lib/systemd/system/jupyter.service
          echo "Description=Jupyter Notebook" >> /lib/systemd/system/jupyter.service
          echo "[Service]" >> /lib/systemd/system/jupyter.service
          echo "Type=simple" >> /lib/systemd/system/jupyter.service
          echo "ExecStart=/opt/jupyter/script/start.sh" >> /lib/systemd/system/jupyter.service
          echo "Restart=always" >> /lib/systemd/system/jupyter.service
          echo "RestartSec=10" >> /lib/systemd/system/jupyter.service
          echo "[Install]" >> /lib/systemd/system/jupyter.service
          echo "WantedBy=multi-user.target" >> /lib/systemd/system/jupyter.service
          mkdir /opt/jupyter
          mkdir /opt/jupyter/notebook
          mkdir /opt/jupyter/script
          touch /opt/jupyter/script/start.sh
          echo '#!/bin/bash' >> /opt/jupyter/script/start.sh
          echo '/usr/bin/python3 -m notebook --NotebookApp.notebook_dir=/opt/jupyter/notebook --NotebookApp.password=$(/usr/bin/python3 -c "from notebook.auth import passwd; print(passwd(\"${Ec2JupyterPassword}\"))")  --allow-root --ip 0.0.0.0 --port 80' >> /opt/jupyter/script/start.sh
          chmod +x /opt/jupyter/script/start.sh
          systemctl daemon-reload
          systemctl start jupyter
          systemctl enable jupyter

  RestApiUploadS3:
    Type: AWS::ApiGateway::RestApi
    Properties:
      Name: "api-upload-s3"
      EndpointConfiguration:
        Types:
          - REGIONAL
      BinaryMediaTypes:
        - application/json
        - text/csv
  ApiResourceBucket:
    Type: AWS::ApiGateway::Resource
    Properties:
      ParentId: !GetAtt RestApiUploadS3.RootResourceId
      PathPart: "{bucket}"
      RestApiId: !Ref RestApiUploadS3
  ApiResourceFileName:
    Type: AWS::ApiGateway::Resource
    Properties:
      ParentId: !Ref ApiResourceBucket
      PathPart: "{filename}"
      RestApiId: !Ref RestApiUploadS3
  ApiResourceCsv:
    Type: AWS::ApiGateway::Resource
    Properties:
      ParentId: !Ref ApiResourceBucket
      PathPart: download-csv
      RestApiId: !Ref RestApiUploadS3

  ApiDeploymentHml:
    Type: AWS::ApiGateway::Deployment
    DependsOn:
      - ApiPutMethod
      - ApiGetMethod
    Properties:
      RestApiId: !Ref RestApiUploadS3
      StageName: hml

  ApiPutMethod:
    Type: AWS::ApiGateway::Method
    Properties:
      RestApiId: !Ref RestApiUploadS3
      ResourceId: !Ref ApiResourceFileName
      HttpMethod: PUT
      AuthorizationType: NONE
      Integration:
        Type: AWS
        IntegrationHttpMethod: PUT
        Uri: !Sub "arn:aws:apigateway:${AWS::Region}:s3:path/{bucket}/{filename}"
        Credentials: !Sub arn:aws:iam::${AWS::AccountId}:role/LabRole
        RequestParameters:
          integration.request.path.bucket: method.request.path.bucket
          integration.request.path.filename: method.request.path.filename
          integration.request.header.Content-Type: method.request.header.Content-Type
        PassthroughBehavior: WHEN_NO_MATCH
        ContentHandling: CONVERT_TO_BINARY
        IntegrationResponses:
          - StatusCode: 200
      RequestParameters:
        method.request.path.bucket: true
        method.request.path.filename: true
        method.request.header.Content-Type: true
      MethodResponses:
        - StatusCode: 200

  ApiGetMethod:
    Type: AWS::ApiGateway::Method
    Properties:
      RestApiId: !Ref RestApiUploadS3
      ResourceId: !Ref ApiResourceCsv
      HttpMethod: GET
      AuthorizationType: NONE
      RequestParameters:
        method.request.path.bucket: true
      Integration:
        Type: AWS_PROXY
        IntegrationHttpMethod: POST
        Uri: !Sub
        - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${LambdaArn}/invocations
        - LambdaArn: !GetAtt GetLatestCsvFunction.Arn

  ApiDeploymentHml:
    Type: AWS::ApiGateway::Deployment
    DependsOn:
      - ApiPutMethod
      - ApiGetMethod
    Properties:
      RestApiId: !Ref RestApiUploadS3

  ApiStage:
    Type: AWS::ApiGateway::Stage
    Properties:
      StageName: hml
      RestApiId: !Ref RestApiUploadS3
      DeploymentId: !Ref ApiDeploymentHml
  ApiGatewayLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: /aws/apigateway/upload-s3-log
      RetentionInDays: 7

  GetLatestCsvFunction:
    Type: AWS::Lambda::Function
    Properties:
      FunctionName: get_latest_csv
      Runtime: python3.11
      Handler: get_latest_csv.lambda_handler
      Code:
        S3Bucket: !Ref SetupBucket
        S3Key: get_latest_csv.zip
      Timeout: 10
      MemorySize: 128
      Role: !Sub arn:aws:iam::${AWS::AccountId}:role/LabRole

  LambdaInvokePermissionGetCsv:
    Type: AWS::Lambda::Permission
    Properties:
      FunctionName: !GetAtt GetLatestCsvFunction.Arn
      Action: lambda:InvokeFunction
      Principal: apigateway.amazonaws.com
      SourceArn: !Sub arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${RestApiUploadS3}/*/GET/{bucket}/download-csv

  FunctionRawToTrusted:
    Type: AWS::Lambda::Function
    Properties:
      FunctionName: trigger_raw_to_trusted
      Runtime: python3.11
      Handler: trigger_raw_to_trusted.lambda_handler
      Code:
        S3Bucket: !Ref SetupBucket
        S3Key: trigger_raw_to_trusted.zip
      Timeout: 10
      MemorySize: 128
      Role: !Sub arn:aws:iam::${AWS::AccountId}:role/LabRole  
  LambdaInvokePermissionS3Raw:
    Type: AWS::Lambda::Permission
    Properties:
      FunctionName: !Ref FunctionRawToTrusted
      Action: lambda:InvokeFunction
      Principal: s3.amazonaws.com
      SourceArn: !Sub arn:aws:s3:::raw-bucket-${AWS::AccountId}
  
  FunctionTrustedToClient:
    Type: AWS::Lambda::Function
    Properties:
      FunctionName: trigger_trusted_to_client
      Runtime: python3.11
      Handler: trigger_trusted_to_client.lambda_handler
      Code:
        S3Bucket: !Ref SetupBucket
        S3Key: trigger_trusted_to_client.zip
      Timeout: 10
      MemorySize: 128
      Role: !Sub arn:aws:iam::${AWS::AccountId}:role/LabRole  
  LambdaInvokePermissionS3Trusted:
    Type: AWS::Lambda::Permission
    Properties:
      FunctionName: !Ref FunctionTrustedToClient
      Action: lambda:InvokeFunction
      Principal: s3.amazonaws.com
      SourceArn: !Sub arn:aws:s3:::trusted-bucket-${AWS::AccountId}

  RawBucket:
    Type: AWS::S3::Bucket
    DependsOn: LambdaInvokePermissionS3Raw
    Properties:
      BucketName: !Sub raw-bucket-${AWS::AccountId}
      Tags:
        - Key: Name
          Value: RawBucket
      NotificationConfiguration:
        LambdaConfigurations:
          - Event: s3:ObjectCreated:*
            Function: !GetAtt FunctionRawToTrusted.Arn
  TrustedBucket:
    Type: AWS::S3::Bucket
    DependsOn: LambdaInvokePermissionS3Trusted
    Properties:
      BucketName: !Sub trusted-bucket-${AWS::AccountId}
      Tags:
        - Key: Name
          Value: TrustedBucket
      NotificationConfiguration:
        LambdaConfigurations:
          - Event: s3:ObjectCreated:*
            Function: !GetAtt FunctionTrustedToClient.Arn
  ClientBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub client-bucket-${AWS::AccountId}
      Tags:
        - Key: Name
          Value: ClientBucket

  GrafanaEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref Ec2KeyPairName
      ImageId: ami-0fc5d935ebf8bc3bc
      InstanceType: t2.micro
      SubnetId: !Ref PublicSubnet
      IamInstanceProfile: LabInstanceProfile
      SecurityGroupIds:
        - !Ref GrafanaSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub grafana-${Client}
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          apt-get update -y
          apt-get upgrade -y

          # Adiciona chave e repositório do Grafana
          curl https://packages.grafana.com/gpg.key | sudo apt-key add -
          echo "deb https://packages.grafana.com/oss/deb stable main" | sudo tee /etc/apt/sources.list.d/grafana.list

          apt-get update -y
          apt-get install -y software-properties-common wget

          # Baixa chave corretamente
          wget -O /tmp/grafana.key https://packages.grafana.com/gpg.key
          sudo apt-key add /tmp/grafana.key

          # Instala Grafana
          apt-get install grafana -y

          # Inicia e habilita o serviço
          systemctl start grafana-server
          systemctl enable grafana-server

          # Troca senha padrão
          sleep 15
          grafana-cli admin reset-admin-password urubu100

  GrafanaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Permite acesso SSH e porta 3000 do Grafana"
      VpcId: !Ref Vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
